--- a/css/home.css
+++ b/css/home.css
@@ -1,309 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
-html {
-    font-size: 100px;
-}
-
-body {
-    font-size: 0.16rem;
-    background: rgb(248, 248, 248);
-}
-
-a {
-    text-decoration: none;
-}
-
-.clear {
-    clear: both;
-}
-
-#header {
-    width: 12.8rem;
-    height: 0.4rem;
-    color: rgb(153, 153, 153);
-    font-size: 0.12rem;
-    min-width: 11.9rem;
-    background-color: rgb(248, 248, 248);
-    font-weight: 350;
-}
-
-#header .header-wrap {
-    margin: 0 0.45rem;
-    height: 0.4rem;
-}
-
-#header .header-bar-position {
-    padding-top: 0.12rem;
-}
-
-#header .icon-local-icon, #header .current-city, #header .change-city, #header .near-citys, #header .user-entry {
-    float: left;
-    margin: 0 0.02rem;
-}
-
-#header .change-city {
-    border: 0.01rem solid rgb(229, 229, 229);
-    border-radius: 0.02rem;
-    padding: 0 0.01rem;
-}
-
-.header-wrap .near-citys {
-    color: rgb(153, 153, 153);
-    margin: 0 0.04rem;
-    font-weight: 300;
-}
-
-#header .user-entry .growth-entry {
-    margin: 0 0.1rem;
-    color: rgb(49, 187, 172);
-    cursor: pointer;
-
-}
-
-#header .user-entry .extra-entry:hover {
-    color: rgb(49, 187, 172);
-}
-
-#header .header-bar-nav {
-    float: right;
-    margin-right: 0.19rem;
-}
-
-#header .header-bar-nav .header-nav-first {
-    list-style: none;
-    float: left;
-}
-
-#header .header-bar-nav .header-nav-first .has-child {
-    float: left;
-    padding: 0 0.14rem;
-}
-
-#header .header-bar-nav .header-nav-first .has-child a {
-    color: rgb(153, 153, 153);
-}
-
-#header .header-bar-nav .header-nav-first .has-child:first-child {
-    position: relative;
-}
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(3) {
-    position: relative;
-}
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(4) {
-    position: relative;
-}
-
-#header .header-bar-nav .header-nav-first .has-child:first-child:hover .header-nav-my {
-    display: block;
-}
-
-#header .header-bar-nav .header-nav-first>li:nth-child(2):hover a {
-    color: rgb(49, 187, 172);
-}
-
-#header .header-bar-nav .header-nav-first .has-child .header-nav-second {
-    list-style: none;
-    background: rgb(255, 255, 255);
-    border-radius: 0.02rem;
-    box-shadow: 0.001rem 0.001rem 0.05rem #cccccc;
-    text-align: center;
-}
-
-#header .header-bar-nav .header-nav-first .has-child .header-nav-my {
-    position: absolute;
-    right: 0.05rem;
-    top: -0.12rem;
-    width: 0.76rem;
-    height: 1.8rem;
-    display: none;
-    padding-top: 0.12rem;
-}
-
-#header .header-bar-nav .header-nav-first .has-child .header-nav-second li {
-    padding-bottom: 0.18rem;
-    font-weight: 300;
-}
-
-#header .header-bar-nav .header-nav-first .has-child .header-nav-second li:hover a {
-    color: rgb(49, 187, 172);
-}
-
-#header .header-bar-nav .header-nav-first .has-child .header-nav-merchant {
-    position: absolute;
-    right: -0.12rem;
-    top: -0.12rem;
-    width: 1rem;
-    height: 2.4rem;
-    padding-top: 0.12rem;
-    display: none;
-}
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(3):hover .header-nav-merchant {
-    display: block;
-}
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(4) .header-nav-second {
-    position: absolute;
-    right: -0.2rem;
-    top: 0.29rem;
-    z-index: 1;
-    width: 12rem;
-    height: 3rem;
-    display: none;
-}
-
-/* #header .header-bar-nav .header-nav-first > .has-child:nth-child(4):hover {
-    background: rgb(255, 255, 255);
-    border-radius: 0.02rem;
-    box-shadow: 0.001rem 0.001rem 0.05rem #cccccc;
-} */
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(4):hover .header-nav-second {
-    display: block;
-}
-
-#header .header-bar-nav .header-nav-first>.has-child:nth-child(4) .header-nav-site .header-jiulv {
-    width: 2.34rem;
-    font-size: 12px;
-    text-align: center;
-}
-
-#header .header-wrap::after {
-    display: block;
-    clear: both;
-    height: 0;
-    content: "";
-    visibility: hidden;
-}
-
-#header .header-content-wrap {
-    background: #ffffff;
-    box-shadow: 0.001rem 0.01rem 0.05rem #cccccc;
-    padding: 0 0.45rem;
-    width: 12.8rem;
-    margin: auto;
-    height: 1.22rem;
-    padding-bottom: 0.35rem;
-}
-
-#header .header-content-wrap .header-content .header-title-module {
-    width: 2.20rem;
-    height: 0.54rem;
-    padding: 0.28rem 0.6rem 0.4rem 0;
-    float: left;
-  
-}
-
-#header .header-content-wrap .header-content .header-title-module .header-title img {
-    width: 1.26rem;
-    height: 0.46rem;
-}
-
-#header .header-content-wrap .header-search-module {
-    width: 5.52rem;
-    height: 0.67rem;
-    padding: 0.28rem 0.6rem 0.4rem 0;
-    float: left;
-    position: relative;
-}
-#header .header-content-wrap .header-search-module .header-search-block{
-    height: 0.4rem;
-    padding-bottom: 0.1rem;
-}
-#header .header-content-wrap .header-search-module input.header-search-input {
-    width: 4.42rem;
-    height: 0.2rem;
-    padding: 0.1rem;
-    color: 0.15rem;
-    border: 0.01rem solid rgb(49, 187, 172);
-    border-top-left-radius: 0.02rem;
-    border-bottom-left-radius: 0.02rem;
-    cursor: text;
-    float: left;
-    border-right: 0;
-    font-size: 0.15rem;
-    font-weight: 300;
-    outline: none;
-}
-
-#header .header-content-wrap .header-search-module .header-search-btn {
-    width: 0.88rem;
-    height: 0.42rem;
-    float: left;
-    border: 0.01rem solid rgb(19, 209, 190);
-    cursor: pointer;
-    background: rgb(19, 209, 190);
-    border-top-right-radius: 0.02rem;
-    border-bottom-right-radius: 0.02rem;
-    outline: none;
-}
-
-#header .header-content-wrap .header-search-module .header-search-btn .iconfont {
-    text-align: center;
-    font-size: 0.2rem;
-    color: #ffffff;
-}
-
-#header .header-content-wrap .header-search-suggest {
-    width: 4.62rem;
-    height: 0.68rem;
-    position: absolute;
-    top:0.26rem;
-    display: none;
-    z-index: 99;
-   
-    /* background: red; */
-}
-
-#header .header-content-wrap .header-search-suggest[active="true"]{
-    display: block;
-}
-#header .header-content-wrap .header-search-suggest .header-search-noinput {
-    width: 4.58rem;
-    height: 0.7rem;
-    padding: 0rem 0 0 0.05rem;
-    margin-top: 0.45rem;
-    border-bottom-right-radius: 0.02rem;
-    border-bottom-left-radius: 0.02rem;
-    border-radius: 0.02rem;
-    box-shadow: 0.001rem 0.01rem 0.05rem #cccccc;
-    background: rgb(255, 254, 254);
-    /* background: red; */
-}
-
-#header .header-content-wrap .header-search-suggest .header-search-noinput h6 {
-    font-weight: 380;
-    padding-bottom: 0.1rem;
-}
-
-#header .header-content-wrap .header-search-suggest .header-search-noinput a {
-    color: #999;
-    font-weight: 340;
-    padding-right: 0.05rem;
-}
-
-#header .header-content-wrap .header-search-suggest .header-search-noinput a:hover {
-    color: rgb(19, 209, 190);
-}
-
-#header .header-content-wrap .header-content .header-hotword>a {
-    color: #999;
-    font-weight: 340;
-}
-#header .header-content-wrap .header-content .header-hotword>a:hover{
-    color: rgb(19, 209, 190);
-}
 #main {
-    width: 12.8rem;
+    width: 100%;
     margin-top: 0.25rem;
     background: rgb(248, 248, 248);
 }
-
+#main .mian-wrapper{
+    width: 12.8rem;
+}
 #main .index-container {
     width: 11.9rem;
     height: 20rem;
@@ -591,6 +294,7 @@ a {
     padding-top: 0.3rem;
     text-align: center;
 }
+
 #main .index-container .banner-container .banner-row .login-container .head-img-row img{
     width: 0.47rem;
     height: 0.47rem;
@@ -600,7 +304,7 @@ a {
 #main .index-container .banner-container .banner-row .login-container p{
     text-align: center;
 }
-#main .index-container .banner-container .banner-row .login-container a{
+#main .index-container .banner-container .banner-row .login-container a.register,#main .index-container .banner-container .banner-row .login-container a.login{
     display: inline-block;
     width: 1.18rem;
     height: 0.38rem;
@@ -619,6 +323,7 @@ a {
     top: 2.41rem;
     left: 0.1rem;
 }
+
  #main .index-container .banner-container .banner-row .pic-2 {
     margin-top: 0.1rem;
     width: 2.7rem;
@@ -963,7 +668,7 @@ a {
     overflow: hidden;
 }
 #main .maoyan-scenes-container .maoyan-container .scenes-body .slider-content{
-    width: 25rem;
+    width: 23.6rem;
     height: 2.97rem;
     position: absolute;
     left: 0;
@@ -982,7 +687,6 @@ a {
     margin-right: 0.215rem;
     position: relative;
     border-radius: 0.02rem;
-    /* padding-left: 0.0rem; */
 }
 #main .maoyan-scenes-container .maoyan-container .scenes-body .slider-content .slider-item-film .film-img{
     width: 2.14rem;
@@ -1105,12 +809,27 @@ a {
     padding-top: 0.1rem;
     color: black;
 }
+#main .scenes-container .zhenguo-container .poi-info div.title {
+    width: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #222222;
+}
 
 #main .scenes-container .quality-container .cheap-cotents a .sub-title {
    font-size: 0.12rem;
     font-weight: 500;
     padding: 0.05rem 0rem;
     color: #cccccc;
+    font-weight: 300;
+}
+#main .scenes-container .zhenguo-container .poi-info div.sub-title {
+    width: 2.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #999;
     font-weight: 300;
 }
 #main .scenes-container .quality-container .cheap-cotents a .tags-wrapper {
@@ -1184,14 +903,11 @@ a {
     width: 11.9rem;
     height: 2.18rem;
     margin: auto;
-  
     padding-top: 0.1rem;
 }
 #main .botton-nav-container .b-n-content .b-n-classification{
     width: 11.9rem;
     height: 0.73rem;
-  
-   
 }
 
 #main .botton-nav-container .b-n-content .b-n-classification .b-n-subtitle{
@@ -1219,85 +935,27 @@ a {
 #main .botton-nav-container .b-n-content .b-n-classification .b-n-sublist .b-n-list-item:hover{
     color: #06C1AE;
 }
-#com-footer{
-    width: 12.8rem;
-    height: 6.35rem;
-    margin: auto;
-    margin-top: 0.4rem;
-    
-    
-}
-#com-footer .footer-content{
-    width: 11.9rem;
-    height: 6.35rem;
-    
-}
-#com-footer .footer-link {
-    width: 11rem;
-    height: 4.32rem;
-    padding-top:0.5rem;
-    padding-left: 0.8rem;
-    padding-bottom:0.5rem;
-    border-top: 0.01rem solid #cccccc;
-    border-bottom: 0.01rem solid #cccccc;
-    margin: auto;
-}
-#com-footer .footer-link .footer-column{
-    float: left;
-    padding-top: 0.2rem;
-}
-#com-footer .footer-link .title{
-    font-weight:500;
-    color: #999;
-    width: 2.2rem;
-    height: 0.28rem;
-}
-#com-footer .footer-link .footlist{
-    list-style: none;
-}
-#com-footer .footer-link .footlist li a{
-    color: #999;
-    font-weight: 300;
-    font-size: 0.14rem;
-}
-#com-footer .footer-link .footlist li a:hover{
-    color: #06C1AE;
-}
-#com-footer .footer-content{
-    margin: auto;
-}
-#com-footer .footer-content .footer-copyright {
-    width: 11.7rem;
-    height: 0.76rem;
-    padding: 0.15rem 02rem 0.3rem 0;
-}
-#com-footer .footer-content .footer-copyright .footer-copyright-left{
-    width: 4.21rem;
-    height: 0.76rem;
-    float: left;
-    padding-left: 0.3rem;
-}
-#com-footer .footer-content .footer-copyright .footer-copyright-left .left-item{
+
+#main .login-container .icon-box{
     font-size: 0.12rem;
-    color: #999;
-    padding-left: 0.2rem;
-    padding-top:0.05rem;
+    color: #78cfc5;
+    width: 100%;
+    padding: 0 0.2rem;
 }
-#com-footer .footer-content .footer-copyright .footer-copyright-right{
-    height: 0.76rem;
-    float: right;
-    padding-top: 0.2rem;
-   
+#main .login-container .icon-box div{
+float: left;
+padding: 0.1rem;
+
 }
-#com-footer .footer-content .footer-copyright .footer-copyright-right  p{
-    color: #999;
-    font-size: 0.12rem;
-    padding-bottom: 0.1rem;
-   
+#main .login-container .icon-box div p{
+    color: black;
 }
 
-#com-footer .footer-content .footer-copyright .footer-copyright-right img{
-    width: 1.09rem;
-    height: 0.38rem;
-
+#main .login-container .head-img-row a.img-target{
+    display: inline-block;
+    width: 0.47rem;
+    height: 0.47rem;
+    border-radius: 0.3rem;
+    padding: 0.04rem;
+    background: #F60;
 }
