--- a/css/film.css
+++ b/css/film.css
@@ -9,6 +9,7 @@ html {
 
 body {
     font-size: 0.16rem;
+    background-color: #ffffff;
 }
 
 a {
@@ -22,6 +23,7 @@ a {
 #header {
     width: 100%;
     height: 0.8rem;
+    background-color: #ffffff;
 }
 
 #header .wrapper {
@@ -151,7 +153,6 @@ a {
 
 #main .content-wrapper {
     width: 12rem;
-    height: 10rem;
     margin: auto;
     min-width: 4rem;
 }
@@ -251,21 +252,6 @@ a {
 #main .content-wrapper .movie-selection .seating-area{
     position: relative;
 }
-#main .content-wrapper .movie-selection .seating-area .screen {
-    width: 5.6rem;
-    height: 0.5rem;
-    margin: auto;
-}
-
-#main .content-wrapper .movie-selection .seat-example .seating-area .screen img {
-    width: 5.6rem;
-    height: 0.5rem;
-    margin: auto;
-}
-
-#main .content-wrapper .movie-selection .seat-example .seating-area .screen p {
-    text-align: center;
-}
 
 #main .content-wrapper .movie-selection .seat-example .seating-area .column {
     width: 0.2rem;
@@ -274,42 +260,91 @@ a {
 
 #main .content-wrapper .movie-selection .seat-example .seating-area .column ul.num {
     list-style: none;
-    padding: 0.65rem 0 0 0.3rem;
+    padding: 1rem 0 0 0.3rem;
 }
 
 #main .content-wrapper .movie-selection .seat-example .seating-area .column ul.num li {
     padding-bottom: 0.2rem;
     color: #666;
 }
-
-#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper {
+#main .content-wrapper .movie-selection .seat-example .seating-area .viewing {
     position: absolute;
-    width: 7.5rem;
+    width: 7rem;
     overflow: scroll;
-    top: 1.15rem;
+    top: 0;
     left: 1.2rem;
     float: left;
 }
+#main .content-wrapper .movie-selection .seat-example .seating-area .viewing .screen{
+    width: 8rem;
+    height: 0.5rem;
+    padding-bottom: 0.1rem;
+}
+#main .content-wrapper .movie-selection .seat-example .seating-area .screen img {
+    width: 5.6rem;
+    height: 0.5rem;
+    margin-left: 1.25rem;
+}
+
+#main .content-wrapper .movie-selection .seat-example .seating-area .screen p {
+    text-align: center;
+}
 
 #main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row {
-    width: 8rem;
-    height: 0.26rem;
-    margin-bottom: 0.15rem;
+    white-space: nowrap;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row ul {
-    list-style: none;
-    width: 8rem;
+#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row .seat {
+    display: inline-block;
+    font-size: 0;
+    width: 0.3rem;
     height: 0.26rem;
+    margin: 0 0.05rem;
+    background: url('../images/seat.png') no-repeat;
 }
 
-#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row ul li {
-    float: left;
-    padding: 0 0.1rem 0.1rem 0;
+#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row .seat.selected {
+    background-image: url('../images/seat_selected.png');
 }
-#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .right-shift{
-    padding-left: 0.4rem;
+
+#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row .seat.sold {
+    background-image: url('../images/seat_sold.png');
 }
+
+#main .content-wrapper .movie-selection .seat-example .seating-area .seats-wrapper .row .seat.empty {
+    background-image: none;
+}
+.ticket-container{
+    height: 0.6rem;
+}
+
+.ticket-container .ticket {
+    cursor: default;
+    position: relative;
+    font-size: 12px;
+    color: #f03d37;
+    display: inline-block;
+    width: 60px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    margin: 0 12px 10px 0;
+    background: url('../images/ticket_bg.png') no-repeat;
+}
+
+.ticket-container .ticket:hover:after {
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    content: "";
+    background: url('../images/ticket_clear.png') no-repeat;
+    width: 0.16rem;
+    height: 0.16rem;
+    background-size: 0.16rem;
+}
+
 #main .content-wrapper .movie-selection .ticket-info{
     width: 3.5rem;
     height: 7.2rem;
@@ -417,4 +452,32 @@ a {
     line-height: 0.42rem;
     border-radius: 0.21rem;
     margin-top: 0.5rem;
+}
+#com-footer{
+    background-color: #262426;
+}
+#main .content-wrapper .movie-selection .ticket-info .film-content .selected-info {
+    color: #666;
+    padding: 0.1rem 0;
+}
+#main .content-wrapper .movie-selection .ticket-info .film-content .selected-info .tip{
+    float: left;
+}
+#main .content-wrapper .movie-selection .ticket-info .film-content .selected-info .seat-num{
+    float: left;
+    width: 0.6rem;
+    height: 0.3rem;
+    background-image: url(../images/filmpricetag.png);
+    background-size: 100% 100%;
+    text-align: center;
+    line-height: 0.3rem;
+    font-size: 0.12rem;
+    color: #f03d37;
+    margin-right: 0.1rem;
+}
+#main .content-wrapper .movie-selection .ticket-info .film-content .selected-info .ticket-count{
+    padding-top: 0.1rem;
+}
+#main .content-wrapper .movie-selection .ticket-info .film-content .selected-info .ticket-count .num{
+    color: #f03d37;
 }
