--- a/css/film.css
+++ b/css/film.css
@@ -1,150 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 100px;
-}
-
-body {
-    font-size: 0.16rem;
-    background-color: #ffffff;
-}
-
-a {
-    text-decoration: none;
-}
-
-.clear {
-    clear: both;
-}
-
-#header {
-    width: 100%;
-    height: 0.8rem;
-    background-color: #ffffff;
-}
-
-#header .wrapper {
-    width: 12.8rem;
-    height: 0.8rem;
-    border-bottom: 0.01rem solid #cccccc;
-    margin: auto;
-    padding: 0 0.4rem;
-    min-width: 11.9rem;
-}
-
-#header .wrapper .logo {
-    width: 1.33rem;
-    height: 0.8rem;
-    float: left;
-}
-
-#header .wrapper .logo img {
-    width: 1.33rem;
-    height: 0.4rem;
-    margin-top: 0.2rem;
-}
-
-#header .wrapper .city-container {
-    line-height: 0.8rem;
-    float: left;
-    padding-right: 0.2rem;
-}
-
-#header .wrapper .city-container span {
-    padding-left: 0.2rem;
-    cursor: pointer;
-}
-
-#header .wrapper .nav .navbar {
-    list-style: none;
-    float: left;
-    height: 0.8rem;
-}
-
-#header .wrapper .nav .navbar li {
-    float: left;
-    height: 0.8rem;
-}
-
-#header .wrapper .nav .navbar li a {
-    color: black;
-    font-size: 0.18rem;
-    line-height: 0.8rem;
-    padding: 0 0.25rem;
-}
-
-#header .wrapper .nav .navbar li a:hover {
-    color: #e33632;
-}
-
-#header .wrapper .app-container {
-    line-height: 0.8rem;
-    float: left;
-}
-
-#header .wrapper .serch-box {
-    width: 2.6rem;
-    height: 0.8rem;
-    float: left;
-    margin: 0 0.2rem;
-    position: relative;
-}
-
-#header .wrapper .serch-box .serch-ipt {
-    width: 2.6rem;
-    height: 0.4rem;
-    border: 0.01rem solid #cccccc;
-    background-color: #faf8fa;
-    font-size: 0.14rem;
-    border-radius: 0.2rem;
-    box-sizing: border-box;
-    padding-left: 0.2rem;
-    margin-top: 0.2rem;
-}
-
-#header .wrapper .serch-box .serch-icon {
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 0.2rem;
-    background-color: #ec443e;
-    position: absolute;
-    right: 0;
-    top: 0.2rem;
-    text-align: center;
-}
-
-#header .wrapper .serch-box .serch-icon .icon-serch {
-    font-size: 0.28rem;
-    line-height: 0.4rem;
-    color: #ffffff;
-}
-
-#header .wrapper .avatar {
-    height: 0.8rem;
-    width: 0.6rem;
-    float: left;
-    position: relative;
-}
-
-#header .wrapper .avatar img {
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 0.2rem;
-    margin-top: 0.2rem;
-}
-
-#header .wrapper .icon-drop-down-arrow {
-    font-size: 0.12rem;
-    color: #666666;
-}
-
-#header .wrapper .avatar .icon-drop-down-arrow {
-    position: absolute;
-    top: 0.39rem;
-    right: 0;
+body{
+    background: #ffffff;
 }
 
 #main {
@@ -172,7 +27,7 @@ a {
 #main .content-wrapper .process .step .line {
     width: 3rem;
     height: 0.05rem;
-    background: #ec443e;
+    background: rgb(19, 209, 190);
     position: relative;
 }
 
@@ -180,7 +35,7 @@ a {
     width: 0.18rem;
     height: 0.18rem;
     border-radius: 0.09rem;
-    background: #ec443e;
+    background: rgb(19, 209, 190);
     text-align: center;
     margin: auto;
     position: absolute;
@@ -216,7 +71,7 @@ a {
 #main .content-wrapper .process .step .step-text {
     width: 3rem;
     text-align: center;
-    color: #f03d37;
+    color: rgb(19, 209, 190);
     font-size: 0.14rem;
     padding-top: 0.15rem;
 }
@@ -452,9 +307,6 @@ a {
     line-height: 0.42rem;
     border-radius: 0.21rem;
     margin-top: 0.5rem;
-}
-#com-footer{
-    background-color: #262426;
 }
 #main .content-wrapper .movie-selection .ticket-info .film-content .selected-info {
     color: #666;
